--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,6 +447,10 @@ main {
   font-size: var(--fs-7);
 }
 
+.contact-link:hover {
+  color: #00AA88;
+}
+
 .contact-info address { font-style: normal; }
 
 .social-list {
@@ -1243,19 +1247,17 @@ main {
 
 .map-container {
   /* Container with manual height and widths to display map with the indentifier below */
-  height: 380px;
+  height: 300px;
   width: 100%;
-  padding: 0 0 0 0;
-  margin: 0 auto;
-  border-radius: 18px; 
   margin-bottom: 20px;
-  background-color: red;
 }
 
 #map {
-  display: block;
   height: 100%;
   width: 100%;
+  font-size: 12px;
+  border-radius: 18px;
+  filter: grayscale(1) invert(1);
 }
 
 .contact-form { margin-bottom: 10px; }
@@ -1368,6 +1370,18 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .clients-item { min-width: calc(33.33% - 10px); }
 
+  #mysql { max-width: 100%; height: 110px; margin-top: 15px; }
+
+
+  .download-resume-btn {
+    position: relative;
+    width: 160px;
+    background: var(--border-gradient-onyx);
+    color: #00ff99;
+    margin-left: 88px;
+    margin-top: 10px;
+    padding: 12px 8px 12px 8px;
+  }
 
 
   /**
@@ -1547,6 +1561,8 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .service-content-box { text-align: left; }
 
+  #mysql { max-width: 100%; height: 100px; margin-top: 15px; }
+
   /* testimonials */
 
   .testimonials-title { margin-bottom: 25px; }
@@ -1620,6 +1636,13 @@ textarea.form-input::-webkit-resizer { display: none; }
   /**
    * #RESUME
    */
+
+   .download-resume-btn {
+    width: 180px;
+    padding: 15px 8px 15px 8px;
+    margin-left: 0;
+    margin-top: -10px;
+  }
 
   .timeline-list { margin-left: 65px; }
 
@@ -2022,10 +2045,6 @@ textarea.form-input::-webkit-resizer { display: none; }
   .separator:last-of-type {
     margin: 15px 0;
     opacity: 0;
-  }
-
-  .contact-link:hover {
-    color: #00AA88;
   }
 
   .social-list { justify-content: center; }
